# teller-sprint

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  NOTICE  README.md  arena.yaml  pyproject.toml
docs/: OUTPUT_CONVENTIONS.md  PRIVATE_BETA_ONBOARDING.md  PRODUCTION_RUNBOOK.md
docs/dev/: ARCHITECTURE_DECISIONS.md  BLOCKED.md  CODEX_DAY5_AUDIT.md  CODEX_DAY5_TEST_REPORT.md  CODEX_DAY5_TREASURY_DIAGNOSTIC.md  DAY1_RETROSPECTIVE.md  DAY2_3_RETROSPECTIVE.md  DAY4_RETROSPECTIVE.md  DAY5_RETROSPECTIVE.md  METHODOLOGY.md  REGRESSION_SET_SELECTION.md  REPO_AUDIT.md  SPRINT_STATUS.md  day_1_log.md  day_2_log.md
docs/dev/codex_responses/: adr_002_concurrence.md
docs/pitch/: teller_dev_kit_deck.md  teller_dev_kit_overview.pptx
docs/research/: final_report.md  journey.md
examples/: sec_query.py  treasury_query.py
examples/evoskill_teller/: README.md  setup.sh
examples/evoskill_teller/.claude/skills/teller/: SKILL.md
examples/evoskill_teller/.evoskill/: config.openrouter.toml  config.toml  task.md
examples/evoskill_teller/data/: teller_evoskill_sample.csv
prompts/: _source_goose_prompt.j2  base.j2
results/: gate_sec_20260418T234216Z.json  gate_sec_20260420_track_A_rescore.json  gate_sec_20260421T005737Z.json  gate_sec_20260421T005935Z.json  gate_sec_20260421T021538Z.json  gate_sec_20260421T181730Z.json  gate_sec_20260421T222334Z.json  regression_twenty_20260416T234910Z.json  regression_twenty_20260417T200448Z.json  regression_twenty_20260417T235553Z.json  regression_twenty_20260421T031515Z.json  regression_twenty_20260421T181730Z.json  regression_twenty_20260421T221937Z.json
scripts/: aggregate_results.py  day3_download_sec.py  day3_populate_expected.py  gate_sec.py  local_score.py  regression.py  release_check.py  render_recipes.py
skills/teller/: SKILL.md
src/teller/: __init__.py  agent.py  config.py  corpus.py  normalize.py  result.py  trace.py
src/teller/cli/: __init__.py  __main__.py  main.py
src/teller/domains/sec_filings/: prompt.j2
src/teller/domains/treasury/: prompt.j2  skill.md
src/teller/downloaders/: __init__.py  sec.py
src/teller/recipes/: sec_filings.yaml  treasury.yaml
src/teller/validation/: __init__.py  xbrl.py
tests/: test_agent_abstention_sentinel.py  test_agent_retry.py  test_cli_doctor.py  test_cli_input_validation.py  test_iron_rules.py  test_output_normalization.py  test_package_data.py  test_sec_downloader.py  test_trace_runtime.py  test_xbrl_diagnostics.py  test_xbrl_guardrails.py  test_xbrl_parser.py  test_xbrl_selector.py  test_xbrl_validation_mapping.py
tests/fixtures/officeqa/: complete_246_results.json  regression_twenty.json  variance_matrix.csv
tests/fixtures/sec_filings/: README.md  sec_twenty_five.json
tests/fixtures/sec_filings/corpus/: manifest.json
tests/fixtures/sec_filings/corpus/AMZN/: amzn-20251231.xsd  amzn-20251231_cal.xml  amzn-20251231_def.xml  amzn-20251231_lab.xml  amzn-20251231_pre.xml
tests/fixtures/sec_filings/corpus/GOOGL/: goog-20251231.xsd  goog-20251231_cal.xml  (+3 more)
tests/fixtures/treasury_bulletins/: README.md  index.txt
(+26 files in other folders)
