[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "teller-agent"
version = "0.1.0"
description = "Grounded reasoning agent for enterprise document QA. XBRL-validated answers from SEC filings."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Leon Liu", email = "leon@dolores.research" },
]
keywords = ["llm", "agent", "sec", "xbrl", "finance", "grounded-reasoning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "jinja2>=3.1",
    "click>=8.1",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[project.scripts]
teller = "teller.cli:main"

[project.urls]
Homepage = "https://doloresresearch.com"
Repository = "https://github.com/dolores-research/teller"
Issues = "https://github.com/dolores-research/teller/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
