[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "teller-agent"
version = "0.1.0"
description = "Grounded reasoning agent for enterprise document QA. XBRL-validated answers from SEC filings."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Leon Liu", email = "leon@dolores.research" },
]
keywords = ["llm", "agent", "sec", "xbrl", "finance", "grounded-reasoning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "jinja2>=3.1",
    "click>=8.1",
    "rich>=13.0",
    "arelle-release==2.39.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[project.scripts]
teller = "teller.cli:main"

[project.urls]
Homepage = "https://github.com/Leonwenhao/teller-sprint"
Repository = "https://github.com/Leonwenhao/teller-sprint"
Issues = "https://github.com/Leonwenhao/teller-sprint/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: tests that hit live external services (SEC EDGAR, OpenRouter); deselected by default",
]
addopts = "-m 'not integration'"
